--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "@advanced-rest-client/arc-marked",
   "description": "Port of Polymer's marked-element to LitElement",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "license": "Apache-2.0",
-  "main": "arc-marked.js",
+  "main": "index.js",
+  "module": "index.js",
   "keywords": [
     "web-components",
     "marked"
   ],
   "authors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
+    "Pawel Psztyc"
   ],
   "contributors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
+    "Your name can be here!"
   ],
   "repository": {
     "type": "git",
@@ -25,49 +24,71 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "dompurify": "^2.0.7",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2",
+    "dompurify": "^2.1.1",
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0",
     "marked": "^0.7.0"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.16",
-    "@advanced-rest-client/eslint-config": "^1.1.3",
-    "@advanced-rest-client/prettier-config": "^0.1.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.0.6",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@open-wc/testing": "^2.3.9",
-    "@open-wc/testing-karma": "^3.1.54",
-    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@advanced-rest-client/arc-demo-helper": "^2.2.0",
+    "@advanced-rest-client/testing-karma-sl": "^1.4.2",
+    "@open-wc/eslint-config": "^3.0.0",
+    "@open-wc/testing": "^2.5.27",
+    "@open-wc/testing-karma": "^4.0.7",
+    "@types/dompurify": "^2.0.4",
     "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.23.1",
-    "husky": "^3.0.9",
-    "karma": "^4.4.1",
-    "lint-staged": "^9.4.2",
-    "sinon": "^7.5.0"
+    "es-dev-server": "^1.57.6",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "sinon": "^9.1.0",
+    "typescript": "^4.0.3",
+    "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "test": "karma start --coverage",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
-    "lint:eslint": "eslint --ext .js,.html .",
-    "format:eslint": "eslint --ext .js,.html . --fix",
-    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
-    "format:prettier": "prettier \"**/*.js\" --write",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
+    "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
+    "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
+    "lint:types": "tsc",
+    "lint": "npm run lint:eslint",
+    "format": "npm run format:eslint",
+    "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --legacy --coverage"
+    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
+    "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@open-wc/eslint-config",
+      "eslint-config-prettier"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "demo/**/*.js",
+          "test/**/*.js",
+          "**/demo/**/*.html"
+        ],
+        "rules": {
+          "no-console": "off",
+          "no-unused-expressions": "off",
+          "no-plusplus": "off",
+          "no-param-reassing": "off",
+          "class-methods-use-this": "off",
+          "import/no-extraneous-dependencies": "off"
+        }
+      }
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
