--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@advanced-rest-client/arc-marked",
   "description": "Port of Polymer's marked-element to LitElement",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -24,38 +24,38 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "dompurify": "^2.1.1",
+    "dompurify": "^2.2.7",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
     "marked": "^0.7.0"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^2.2.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.4.2",
-    "@open-wc/eslint-config": "^3.0.0",
-    "@open-wc/testing": "^2.5.27",
-    "@open-wc/testing-karma": "^4.0.7",
-    "@types/dompurify": "^2.0.4",
-    "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.57.6",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "sinon": "^9.1.0",
-    "typescript": "^4.0.3",
+    "@advanced-rest-client/arc-demo-helper": "^2.2.6",
+    "@types/dompurify": "^2.2.1",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@open-wc/eslint-config": "^4.2.0",
+    "@open-wc/testing": "^2.5.32",
+    "@web/dev-server": "^0.1.8",
+    "@web/test-runner": "^0.12.16",
+    "@web/test-runner-playwright": "^0.8.4",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
+    "sinon": "^9.2.4",
+    "typescript": "^4.2.3",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
     "lint:types": "tsc",
     "lint": "npm run lint:eslint",
     "format": "npm run format:eslint",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
+    "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium firefox webkit",
+    "test:watch": "web-test-runner test/**/*.test.js --node-resolve --watch --playwright --browsers chromium",
     "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json"
   },
   "eslintConfig": {
@@ -77,6 +77,16 @@
           "no-param-reassing": "off",
           "class-methods-use-this": "off",
           "import/no-extraneous-dependencies": "off"
+        }
+      },
+      {
+        "files": [
+          "**/*.js"
+        ],
+        "rules": {
+          "no-plusplus": "off",
+          "no-continue": "off",
+          "class-methods-use-this": "off"
         }
       }
     ]
