--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@advanced-rest-client/arc-marked",
   "description": "Port of Polymer's marked-element to LitElement",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -9,9 +9,10 @@
     "web-components",
     "marked"
   ],
-  "authors": [
-    "Pawel Psztyc"
-  ],
+  "author": {
+    "name": "Pawel Uchida-Psztyc",
+    "email": "pawel.psztyc@mulesoft.com"
+  },
   "contributors": [
     "Your name can be here!"
   ],
@@ -24,27 +25,27 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "dompurify": "^2.2.7",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0",
+    "dompurify": "^2.2.9",
+    "lit-element": "^2.5.1",
+    "lit-html": "^1.4.1",
     "marked": "^0.7.0"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^2.2.6",
-    "@types/dompurify": "^2.2.1",
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@open-wc/eslint-config": "^4.2.0",
-    "@open-wc/testing": "^2.5.32",
-    "@web/dev-server": "^0.1.8",
-    "@web/test-runner": "^0.12.16",
-    "@web/test-runner-playwright": "^0.8.4",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "sinon": "^9.2.4",
-    "typescript": "^4.2.3",
+    "@advanced-rest-client/arc-demo-helper": "^3.0.2",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@open-wc/eslint-config": "^4.3.0",
+    "@open-wc/testing": "^2.5.33",
+    "@types/dompurify": "^2.2.2",
+    "@web/dev-server": "^0.1.17",
+    "@web/test-runner": "^0.13.8",
+    "@web/test-runner-playwright": "^0.8.6",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "sinon": "^11.1.1",
+    "typescript": "^4.3.2",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
